packages/isar_plus_generator/test/errors/property/null_byte.dart
// bytes must not be nullable

import 'package:isar_plus/isar.dart';

@collection
class Model {
  Id? id;

  late byte? prop;
}
